# operating-systems

./: .gitignore
bankers_algorithm/: bank.h  bank_algo.cpp  customer.h  utils.h
bankers_algorithm/Contents/: Info.plist
bankers_algorithm/output/: large.txt  medium.txt  small.txt  tinier.txt  tiny.txt
dining_philosophers/: CMakeLists.txt  main.c
mem_manager_project/: a.out  mem_mgr_skeleton.cpp  output.txt
midterm_practise/: CMakeLists.txt  main.c  ping_pong_variant.c  producer_consumer.c.c
ping_pong/: CMakeLists.txt  main.c
unix-shell-wrapper/: README.md  shell.c
